# flyrank-ml-internship-starter

./: SETUP.md  main.py  pyproject.toml
notebooks/: 01_first_look_and_discovery.ipynb  02_your_first_readable_model.ipynb
work/notebooks/: w01_research_question.ipynb  w02_ml_task_framing.ipynb
